--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -109,7 +109,7 @@
        </sizepolicy>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -2140,9 +2140,9 @@
         <widget class="QDoubleSpinBox" name="doubleSpinBox_CS_pSpeedDyn">
          <property name="geometry">
           <rect>
-           <x>240</x>
+           <x>220</x>
            <y>40</y>
-           <width>51</width>
+           <width>91</width>
            <height>22</height>
           </rect>
          </property>
@@ -2162,9 +2162,9 @@
         <widget class="QDoubleSpinBox" name="doubleSpinBox_CS_pJoyUnitCast">
          <property name="geometry">
           <rect>
-           <x>90</x>
+           <x>70</x>
            <y>180</y>
-           <width>51</width>
+           <width>81</width>
            <height>22</height>
           </rect>
          </property>
@@ -2184,9 +2184,9 @@
         <widget class="QDoubleSpinBox" name="doubleSpinBox_CS_pErrGain">
          <property name="geometry">
           <rect>
-           <x>410</x>
+           <x>400</x>
            <y>180</y>
-           <width>51</width>
+           <width>91</width>
            <height>22</height>
           </rect>
          </property>
@@ -2206,9 +2206,9 @@
         <widget class="QDoubleSpinBox" name="doubleSpinBox_CS_pid_pGain">
          <property name="geometry">
           <rect>
-           <x>590</x>
+           <x>570</x>
            <y>120</y>
-           <width>51</width>
+           <width>91</width>
            <height>22</height>
           </rect>
          </property>
@@ -2228,9 +2228,9 @@
         <widget class="QDoubleSpinBox" name="doubleSpinBox_CS_pid_iGain">
          <property name="geometry">
           <rect>
-           <x>590</x>
+           <x>570</x>
            <y>240</y>
-           <width>51</width>
+           <width>91</width>
            <height>22</height>
           </rect>
          </property>
@@ -2250,9 +2250,9 @@
         <widget class="QDoubleSpinBox" name="doubleSpinBox_CS_pid_iMax">
          <property name="geometry">
           <rect>
-           <x>810</x>
+           <x>800</x>
            <y>240</y>
-           <width>51</width>
+           <width>91</width>
            <height>22</height>
           </rect>
          </property>
@@ -2272,9 +2272,9 @@
         <widget class="QDoubleSpinBox" name="doubleSpinBox_CS_pid_iMin">
          <property name="geometry">
           <rect>
-           <x>820</x>
+           <x>800</x>
            <y>320</y>
-           <width>51</width>
+           <width>91</width>
            <height>22</height>
           </rect>
          </property>
@@ -2294,9 +2294,9 @@
         <widget class="QDoubleSpinBox" name="doubleSpinBox_CS_pThrustersCast">
          <property name="geometry">
           <rect>
-           <x>1210</x>
+           <x>1200</x>
            <y>180</y>
-           <width>51</width>
+           <width>91</width>
            <height>22</height>
           </rect>
          </property>
@@ -2316,9 +2316,9 @@
         <widget class="QDoubleSpinBox" name="doubleSpinBox_CS_pThrustersMax">
          <property name="geometry">
           <rect>
-           <x>1330</x>
+           <x>1310</x>
            <y>180</y>
-           <width>51</width>
+           <width>91</width>
            <height>22</height>
           </rect>
          </property>
@@ -2338,9 +2338,9 @@
         <widget class="QDoubleSpinBox" name="doubleSpinBox_CS_pThrustersMin">
          <property name="geometry">
           <rect>
-           <x>1330</x>
+           <x>1310</x>
            <y>260</y>
-           <width>51</width>
+           <width>91</width>
            <height>22</height>
           </rect>
          </property>
@@ -2361,8 +2361,8 @@
          <property name="geometry">
           <rect>
            <x>1140</x>
-           <y>330</y>
-           <width>51</width>
+           <y>310</y>
+           <width>91</width>
            <height>22</height>
           </rect>
          </property>
@@ -2382,9 +2382,9 @@
         <widget class="QDoubleSpinBox" name="doubleSpinBox_CS_speedFilterT">
          <property name="geometry">
           <rect>
-           <x>1300</x>
-           <y>330</y>
-           <width>51</width>
+           <x>1260</x>
+           <y>310</y>
+           <width>91</width>
            <height>22</height>
           </rect>
          </property>
@@ -2405,8 +2405,8 @@
          <property name="geometry">
           <rect>
            <x>340</x>
-           <y>430</y>
-           <width>51</width>
+           <y>410</y>
+           <width>91</width>
            <height>22</height>
           </rect>
          </property>
@@ -2426,9 +2426,9 @@
         <widget class="QDoubleSpinBox" name="doubleSpinBox_CS_posFilterT">
          <property name="geometry">
           <rect>
-           <x>490</x>
-           <y>430</y>
-           <width>51</width>
+           <x>460</x>
+           <y>410</y>
+           <width>91</width>
            <height>22</height>
           </rect>
          </property>
@@ -2461,9 +2461,9 @@
         <widget class="QLabel" name="label_CS_joyUnitCasted">
          <property name="geometry">
           <rect>
-           <x>150</x>
+           <x>140</x>
            <y>240</y>
-           <width>31</width>
+           <width>61</width>
            <height>20</height>
           </rect>
          </property>
@@ -2474,10 +2474,10 @@
         <widget class="QLabel" name="label_CS_joy_iValue">
          <property name="geometry">
           <rect>
-           <x>260</x>
+           <x>250</x>
            <y>240</y>
-           <width>51</width>
-           <height>19</height>
+           <width>61</width>
+           <height>20</height>
           </rect>
          </property>
          <property name="text">
@@ -2488,8 +2488,8 @@
          <property name="geometry">
           <rect>
            <x>360</x>
-           <y>240</y>
-           <width>41</width>
+           <y>260</y>
+           <width>71</width>
            <height>19</height>
           </rect>
          </property>
@@ -2500,9 +2500,9 @@
         <widget class="QLabel" name="label_CS_pidValue">
          <property name="geometry">
           <rect>
-           <x>960</x>
-           <y>240</y>
-           <width>51</width>
+           <x>950</x>
+           <y>260</y>
+           <width>81</width>
            <height>20</height>
           </rect>
          </property>
@@ -2510,7 +2510,7 @@
           <string>pidValue</string>
          </property>
         </widget>
-        <widget class="QLabel" name="label_CS_posFIltered">
+        <widget class="QLabel" name="label_CS_posFiltered">
          <property name="geometry">
           <rect>
            <x>310</x>
@@ -2526,9 +2526,9 @@
         <widget class="QLabel" name="label_CS_dynSummator">
          <property name="geometry">
           <rect>
-           <x>1070</x>
-           <y>240</y>
-           <width>41</width>
+           <x>1040</x>
+           <y>180</y>
+           <width>101</width>
            <height>20</height>
           </rect>
          </property>
@@ -2536,17 +2536,17 @@
           <string>dynSummator</string>
          </property>
         </widget>
-        <widget class="QLabel" name="label_CS_thrustersUnitCast">
+        <widget class="QLabel" name="label_CS_speedError">
          <property name="geometry">
           <rect>
-           <x>1270</x>
-           <y>230</y>
-           <width>51</width>
+           <x>1160</x>
+           <y>260</y>
+           <width>91</width>
            <height>19</height>
           </rect>
          </property>
          <property name="text">
-          <string>unitCast</string>
+          <string>speedError</string>
          </property>
         </widget>
         <widget class="QLabel" name="label_CS_speedFiltered">
@@ -2562,7 +2562,7 @@
           <string>speedFiltered</string>
          </property>
         </widget>
-        <widget class="QLabel" name="label_CS_speedSIgnal">
+        <widget class="QLabel" name="label_CS_speedSignal">
          <property name="geometry">
           <rect>
            <x>1310</x>
@@ -2592,7 +2592,7 @@
          <property name="geometry">
           <rect>
            <x>40</x>
-           <y>360</y>
+           <y>320</y>
            <width>112</width>
            <height>23</height>
           </rect>
@@ -2600,12 +2600,15 @@
          <property name="text">
           <string>Yaw</string>
          </property>
+         <property name="checked">
+          <bool>true</bool>
+         </property>
         </widget>
         <widget class="QRadioButton" name="radioButton_CS_DepthSelect">
          <property name="geometry">
           <rect>
            <x>40</x>
-           <y>390</y>
+           <y>350</y>
            <width>112</width>
            <height>23</height>
           </rect>
@@ -2618,7 +2621,7 @@
          <property name="geometry">
           <rect>
            <x>40</x>
-           <y>420</y>
+           <y>380</y>
            <width>112</width>
            <height>23</height>
           </rect>
@@ -2657,6 +2660,19 @@
          </property>
          <property name="checkable">
           <bool>false</bool>
+         </property>
+        </widget>
+        <widget class="QRadioButton" name="radioButton_CS_PitchSelect">
+         <property name="geometry">
+          <rect>
+           <x>40</x>
+           <y>410</y>
+           <width>112</width>
+           <height>23</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Pitch</string>
          </property>
         </widget>
        </widget>
