--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -109,7 +109,7 @@
        </sizepolicy>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="tabSettings">
        <attribute name="title">
@@ -506,6 +506,29 @@
               <layout class="QVBoxLayout" name="verticalLayout_14">
                <item>
                 <layout class="QVBoxLayout" name="verticalLayout_13">
+                 <item>
+                  <widget class="QDoubleSpinBox" name="doubleSpinBox_sensitivity">
+                   <property name="decimals">
+                    <number>4</number>
+                   </property>
+                   <property name="maximum">
+                    <double>1.000000000000000</double>
+                   </property>
+                   <property name="singleStep">
+                    <double>0.010000000000000</double>
+                   </property>
+                   <property name="value">
+                    <double>1.000000000000000</double>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QPushButton" name="pushButton_jetsonOnOff">
+                   <property name="text">
+                    <string>Jetson ON</string>
+                   </property>
+                  </widget>
+                 </item>
                  <item>
                   <widget class="QRadioButton" name="radioButton_Joystick">
                    <property name="text">
@@ -1119,7 +1142,7 @@
          <property name="geometry">
           <rect>
            <x>940</x>
-           <y>250</y>
+           <y>180</y>
            <width>91</width>
            <height>25</height>
           </rect>
@@ -1195,6 +1218,22 @@
           <bool>true</bool>
          </property>
         </widget>
+        <widget class="QLineEdit" name="lineEdit_CS_pid_iValue">
+         <property name="geometry">
+          <rect>
+           <x>870</x>
+           <y>290</y>
+           <width>91</width>
+           <height>25</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>pid_iValue</string>
+         </property>
+         <property name="readOnly">
+          <bool>true</bool>
+         </property>
+        </widget>
        </widget>
       </widget>
      </widget>
@@ -1207,7 +1246,7 @@
      <x>0</x>
      <y>0</y>
      <width>1500</width>
-     <height>20</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
